[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "pingwake"
version = "0.3.0"
description = "Personal monitoring and keep-alive service for APIs and databases."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "João Vitor Barreto Pereira" }]
dependencies = [
  "alembic>=1.16,<2.0",
  "asyncpg>=0.30,<1.0",
  "fastapi>=0.116,<1.0",
  "httpx>=0.28,<1.0",
  "pydantic-settings>=2.10,<3.0",
  "sqlalchemy[asyncio]>=2.0.41,<3.0",
  "uvicorn[standard]>=0.35,<1.0",
]

[project.optional-dependencies]
dev = [
  "aiosqlite>=0.21,<1.0",
  "mypy>=1.16,<2.0",
  "pytest>=8.4,<9.0",
  "pytest-asyncio>=1.0,<2.0",
  "pytest-cov>=6.2,<7.0",
  "ruff>=0.12,<1.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q --disable-warnings --maxfail=1"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]
ignore = ["B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
exclude = ["migrations"]
